--- a/src/404.html
+++ b/src/404.html
@@ -142,13 +142,13 @@
                     </div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
+                        <a href="./price.html">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
+                        <a href="./price.html">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
+                        <a href="./price.html">ファンダイビング</a>
                       </li>
                     </ul>
                   </li>
@@ -162,13 +162,15 @@
                     <div>
                       <ul class="nav-contents__items">
                         <li class="nav-contents__item">
-                          <a href="#">ライセンス講習</a>
+                          <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                         </li>
                         <li class="nav-contents__item">
-                          <a href="#">体験ダイビング</a>
+                          <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                         </li>
                         <li class="nav-contents__item">
-                          <a href="#">ファンダイビング</a>
+                          <a href="information.html?id=tab02#tab02"
+                            >ファンダイビング</a
+                          >
                         </li>
                       </ul>
                     </div>
@@ -299,13 +301,13 @@
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="./price.html">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="./price.html">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="./price.html">ファンダイビング</a>
                     </li>
                   </ul>
                 </li>
@@ -319,13 +321,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
+                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
+                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
+                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
