--- a/src/about-us.html
+++ b/src/about-us.html
@@ -136,13 +136,13 @@
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="./price.html">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="./price.html">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="./price.html">ファンダイビング</a>
                     </li>
                   </ul>
                 </li>
@@ -156,13 +156,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
+                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
+                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
+                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -218,22 +218,22 @@
         </div>
       </section>
 
-      <section class="sub-about-us layout-sub-about-us decoration">
-        <div class="sub-about-us__breadcrumb breadcrumb">
-          <div class="breadcrumb__inner inner">
-            <!-- Breadcrumb NavXTで出力される部分 ここから -->
-            <span>
-              <a href="./index.html">
-                <span>TOP</span>
-              </a>
-            </span>
-            &nbsp;&gt;&nbsp;
-            <span>
-              <span class="breadcrumb__current-item">私たちについて</span>
-            </span>
-            <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-          </div>
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">私たちについて</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
         </div>
+      </div>
+      <section class="sub-about-us layout-sub-about-us">
         <div class="sub-about-us__inner inner">
           <div class="sub-about-us__wrapper">
             <div class="about-us__img-wrap about-us">
@@ -288,46 +288,40 @@
               <div class="gallery__modal js-modal">
                 <ul class="gallery__list gallery-list">
                   <li class="gallery-list__item js-modal-open">
-                    <a href="">
-                      <img
-                        src="./assets/images/sub/sub-aboutus_1.jpg"
-                        alt="海の中でたくさんの赤い小さな魚が泳いでいる様子"
-                    /></a>
+                    <img
+                      src="./assets/images/sub/sub-aboutus_1.jpg"
+                      alt="海の中でたくさんの赤い小さな魚が泳いでいる様子"
+                    />
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <a href="">
-                      <img
-                        src="./assets/images/sub/sub-aboutus_2.jpg"
-                        alt="透明な海にボートが浮かんでいる様子"
-                    /></a>
+                    <img
+                      src="./assets/images/sub/sub-aboutus_2.jpg"
+                      alt="透明な海にボートが浮かんでいる様子"
+                    />
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <a href="">
-                      <img
-                        src="./assets/images/sub/sub-aboutus_3.jpg"
-                        alt="2匹の黄色い魚が多いでいる様子"
-                    /></a>
+                    <img
+                      src="./assets/images/sub/sub-aboutus_3.jpg"
+                      alt="2匹の黄色い魚が多いでいる様子"
+                    />
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <a href="">
-                      <img
-                        src="./assets/images/sub/sub-aboutus_4.jpg"
-                        alt="海の中の黄色の魚の様子"
-                    /></a>
+                    <img
+                      src="./assets/images/sub/sub-aboutus_4.jpg"
+                      alt="海の中の黄色の魚の様子"
+                    />
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <a href="">
-                      <img
-                        src="./assets/images/sub/sub-aboutus_5.jpg"
-                        alt="大量の魚が泳いでいる様子"
-                    /></a>
+                    <img
+                      src="./assets/images/sub/sub-aboutus_5.jpg"
+                      alt="大量の魚が泳いでいる様子"
+                    />
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <a href="">
-                      <img
-                        src="./assets/images/sub/sub-aboutus_6.jpg"
-                        alt="珊瑚礁と黄色の2匹の魚の様子"
-                    /></a>
+                    <img
+                      src="./assets/images/sub/sub-aboutus_6.jpg"
+                      alt="珊瑚礁と黄色の2匹の魚の様子"
+                    />
                   </li>
                 </ul>
                 <div class="modal">
@@ -451,13 +445,13 @@
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
-                    <a href="#">ライセンス講習</a>
+                    <a href="./price.html">ライセンス講習</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">体験ダイビング</a>
+                    <a href="./price.html">体験ダイビング</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">ファンダイビング</a>
+                    <a href="./price.html">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -471,13 +465,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
