--- a/src/campaign.html
+++ b/src/campaign.html
@@ -136,13 +136,13 @@
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="./price.html">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="./price.html">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="./price.html">ファンダイビング</a>
                     </li>
                   </ul>
                 </li>
@@ -156,13 +156,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
+                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
+                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
+                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -218,22 +218,22 @@
         </div>
       </section>
 
-      <div class="sub-campaign layout-sub-campaign decoration">
-        <div class="sub-campaign__breadcrumb breadcrumb">
-          <div class="breadcrumb__inner inner">
-            <!-- Breadcrumb NavXTで出力される部分 ここから -->
-            <span>
-              <a href="./index.html">
-                <span>TOP</span>
-              </a>
-            </span>
-            &nbsp;&gt;&nbsp;
-            <span>
-              <span class="breadcrumb__current-item">キャンペーン</span>
-            </span>
-            <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-          </div>
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">キャンペーン</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
         </div>
+      </div>
+      <div class="sub-campaign layout-sub-campaign">
         <div class="sub-campaign__inner inner">
           <div class="sub-campaign__tab tab">
             <ul class="tab__menu">
@@ -440,8 +440,7 @@
                 <a class="previouspostslink" rel="prev" href="#"
                   ><span></span
                 ></a>
-                <a class="page larger" href="#">1</a>
-                <!-- <span class="current">1</span> -->
+                <span class="current">1</span>
                 <a class="page larger" href="#">2</a>
                 <a class="page larger" href="#">3</a>
                 <a class="page larger" href="#">4</a>
@@ -567,13 +566,13 @@
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
-                    <a href="#">ライセンス講習</a>
+                    <a href="./price.html">ライセンス講習</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">体験ダイビング</a>
+                    <a href="./price.html">体験ダイビング</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">ファンダイビング</a>
+                    <a href="./price.html">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -587,13 +586,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
