--- a/src/information.html
+++ b/src/information.html
@@ -135,13 +135,13 @@
 
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="./price.html">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="./price.html">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="./price.html">ファンダイビング</a>
                     </li>
                   </ul>
                 </li>
@@ -155,13 +155,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
+                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
+                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
+                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -217,38 +217,30 @@
         </div>
       </section>
 
-      <section class="sub-information layout-sub-information decoration">
-        <div class="sub-information__breadcrumb breadcrumb">
-          <div class="breadcrumb__inner inner">
-            <!-- Breadcrumb NavXTで出力される部分 ここから -->
-            <span>
-              <a href="./index.html">
-                <span>TOP</span>
-              </a>
-            </span>
-            &nbsp;&gt;&nbsp;
-            <span>
-              <span class="breadcrumb__current-item">ダイビング情報</span>
-            </span>
-            <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-          </div>
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">ダイビング情報</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
         </div>
+      </div>
+      <section class="sub-information layout-sub-information">
         <div class="sub-information__inner inner">
           <div class="sub-information__contents">
             <div class="sub-information__tab tab-info">
               <ul class="tab-info__menu">
                 <li
-                  class="tab-info__menu-item js-tab-info-menu"
+                  class="tab-info__menu-item js-tab-info-menu current"
                   data-number="tab01"
                 >
-                  <div class="tab-info__img u-desktop">
-                    <img
-                      src="./assets/images/sub/whale-green.svg"
-                      alt="鯨のアイコン"
-                      data-image-default="./assets/images/sub/whale-green.svg"
-                      data-image-active="./assets/images/sub/whale-white.svg"
-                    />
-                  </div>
                   <span>ライセンス<br class="u-mobile" />講習</span>
                 </li>
 
@@ -256,14 +248,6 @@
                   class="tab-info__menu-item js-tab-info-menu"
                   data-number="tab02"
                 >
-                  <div class="tab-info__img u-desktop">
-                    <img
-                      src="./assets/images/sub/shark-white.svg"
-                      alt="鮫のアイコン"
-                      data-image-default="./assets/images/sub/shark-green.svg"
-                      data-image-active="./assets/images/sub/shark-white.svg"
-                    />
-                  </div>
                   <span>ファン<br class="u-mobile" />ダイビング</span>
                 </li>
 
@@ -271,14 +255,7 @@
                   class="tab-info__menu-item js-tab-info-menu"
                   data-number="tab03"
                 >
-                  <div class="tab-info__img u-desktop">
-                    <img
-                      src="./assets/images/sub/fish-white.svg"
-                      alt="魚のアイコン"
-                      data-image-default="./assets/images/sub/fish-green.svg"
-                      data-image-active="./assets/images/sub/fish-white.svg"
-                    />
-                  </div>
+                  <div class="tab-info__img u-desktop"></div>
                   <span>体験<br class="u-mobile" />ダイビング</span>
                 </li>
               </ul>
@@ -286,7 +263,7 @@
               <ul class="tab-info__content">
                 <li
                   id="tab01"
-                  class="tab-info__content-item js-tab-info-content is-tab"
+                  class="tab-info__content-item js-tab-info-content current"
                 >
                   <a href="#" class="info-card">
                     <div class="info-card__body">
@@ -477,13 +454,13 @@
 
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
-                    <a href="#">ライセンス講習</a>
+                    <a href="./price.html">ライセンス講習</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">体験ダイビング</a>
+                    <a href="./price.html">体験ダイビング</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">ファンダイビング</a>
+                    <a href="./price.html">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -497,13 +474,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
