--- a/src/voice.html
+++ b/src/voice.html
@@ -136,13 +136,13 @@
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="./price.html">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="./price.html">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="./price.html">ファンダイビング</a>
                     </li>
                   </ul>
                 </li>
@@ -156,13 +156,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
+                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
+                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
+                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -218,24 +218,23 @@
         </div>
       </section>
 
-      <div class="sub-voice layout-sub-voice decoration">
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">お客さまの声</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
+        </div>
+      </div>
+      <div class="sub-voice layout-sub-voice">
         <div class="sub-voice__inner inner">
-          <div class="sub-voice__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">お客さまの声</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
-          </div>
-
           <div class="sub-voice__tab tab">
             <ul class="tab__menu">
               <li class="tab__menu-item">ALL</li>
@@ -442,13 +441,15 @@
                 <a class="previouspostslink" rel="prev" href="#"
                   ><span></span
                 ></a>
-                <a class="page larger" href="#">1</a>
+                <span class="current">1</span>
                 <a class="page larger" href="#">2</a>
                 <a class="page larger" href="#">3</a>
                 <a class="page larger" href="#">4</a>
                 <a class="page larger u-desktop" href="#">5</a>
                 <a class="page larger u-desktop" href="#">6</a>
-                <a class="nextpostslink" rel="next" href="#"><span></span></a>
+                <a class="nextpostslink" rel="next" href="#"
+                  ><span></span
+                ></a>
               </div>
               <!-- WP-PageNaviで出力される部分 ここまで -->
             </div>
@@ -568,13 +569,13 @@
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
-                    <a href="#">ライセンス講習</a>
+                    <a href="./price.html">ライセンス講習</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">体験ダイビング</a>
+                    <a href="./price.html">体験ダイビング</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">ファンダイビング</a>
+                    <a href="./price.html">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -588,13 +589,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
