--- a/src/site-map.html
+++ b/src/site-map.html
@@ -136,13 +136,13 @@
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="./price.html">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="./price.html">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="./price.html">ファンダイビング</a>
                     </li>
                   </ul>
                 </li>
@@ -156,13 +156,13 @@
                   <div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
-                        <a href="#">ライセンス講習</a>
+                        <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">体験ダイビング</a>
+                        <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                       </li>
                       <li class="nav-contents__item">
-                        <a href="#">ファンダイビング</a>
+                        <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                       </li>
                     </ul>
                   </div>
@@ -455,13 +455,13 @@
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
-                    <a href="#">ライセンス講習</a>
+                    <a href="./price.html">ライセンス講習</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">体験ダイビング</a>
+                    <a href="./price.html">体験ダイビング</a>
                   </li>
                   <li class="nav-contents__item">
-                    <a href="#">ファンダイビング</a>
+                    <a href="./price.html">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -475,13 +475,13 @@
                 <div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
+                      <a href="information.html?id=tab01#tab01">ライセンス講習</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
+                      <a href="information.html?id=tab03#tab03">体験ダイビング</a>
                     </li>
                     <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
+                      <a href="information.html?id=tab02#tab02">ファンダイビング</a>
                     </li>
                   </ul>
                 </div>
